--- a/app.yaml
+++ b/app.yaml
@@ -3,8 +3,11 @@ api_version: go1
 
 handlers:
 
-- url: /static
-  static_dir: static
+- url: /css
+  static_dir: css
+
+- url: /js
+  static_dir: js
 
 - url: /.*
   script: _go_app
